--- a/frontend/index.html
+++ b/frontend/index.html
@@ -236,12 +236,13 @@
                     <th>Progresso</th>
                     <th>Valor</th>
                     <th>NF</th>
+                    <th>Status</th>
                     <th>Ações</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td colspan="7" class="text-center">Carregando...</td>
+                    <td colspan="8" class="text-center">Carregando...</td>
                   </tr>
                 </tbody>
               </table>
@@ -394,6 +395,171 @@
           <button class="btn btn-primary" onclick="saveCliente()">
             Salvar
           </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Contrato Modal -->
+    <div id="modal-contrato" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 id="contrato-modal-title">Novo Contrato</h3>
+          <button class="btn-close" onclick="closeModal()">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="form-contrato">
+            <input type="hidden" id="contrato-id" />
+
+            <div class="form-group">
+              <label>Cliente *</label>
+              <select id="contrato-cliente" required></select>
+            </div>
+
+            <div class="form-row">
+              <div class="form-group">
+                <label>Data Início *</label>
+                <input type="date" id="contrato-data-inicio" required />
+              </div>
+              <div class="form-group">
+                <label>Data Fim *</label>
+                <input type="date" id="contrato-data-fim" required />
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="form-group">
+                <label>Frequência</label>
+                <select id="contrato-frequencia">
+                  <option value="ambas">Ambas</option>
+                  <option value="102.7">102.7</option>
+                  <option value="104.7">104.7</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label>Valor Total (R$)</label>
+                <input type="number" step="0.01" min="0" id="contrato-valor-total" />
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="form-group">
+                <label>Status Contrato</label>
+                <select id="contrato-status-contrato">
+                  <option value="ativo">Ativo</option>
+                  <option value="concluído">Concluído</option>
+                  <option value="cancelado">Cancelado</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label>Status NF</label>
+                <select id="contrato-status-nf">
+                  <option value="pendente">Pendente</option>
+                  <option value="emitida">Emitida</option>
+                  <option value="paga">Paga</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="form-group">
+                <label>Número NF</label>
+                <input type="text" id="contrato-numero-nf" />
+              </div>
+              <div class="form-group">
+                <label>Data Emissão NF</label>
+                <input type="date" id="contrato-data-emissao-nf" />
+              </div>
+            </div>
+
+            <div id="contrato-item-section">
+              <h4>Item do Contrato</h4>
+              <div class="form-row">
+                <div class="form-group">
+                  <label>Tipo de Programa *</label>
+                  <input type="text" id="contrato-item-tipo" placeholder="musical, esporte..." />
+                </div>
+                <div class="form-group">
+                  <label>Quantidade Contratada *</label>
+                  <input type="number" min="1" id="contrato-item-quantidade" />
+                </div>
+              </div>
+              <div class="form-group">
+                <label>Observações do Item</label>
+                <textarea id="contrato-item-observacoes" rows="2"></textarea>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label>Observações</label>
+              <textarea id="contrato-observacoes" rows="3"></textarea>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
+          <button class="btn btn-primary" onclick="saveContrato()">Salvar</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Arquivo Modal -->
+    <div id="modal-arquivo" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 id="arquivo-modal-title">Novo Arquivo</h3>
+          <button class="btn-close" onclick="closeModal()">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="form-arquivo">
+            <input type="hidden" id="arquivo-id" />
+
+            <div class="form-group">
+              <label>Cliente *</label>
+              <select id="arquivo-cliente" required></select>
+            </div>
+
+            <div class="form-group">
+              <label>Nome do Arquivo *</label>
+              <input type="text" id="arquivo-nome" required />
+            </div>
+
+            <div class="form-group">
+              <label>Título</label>
+              <input type="text" id="arquivo-titulo" />
+            </div>
+
+            <div class="form-row">
+              <div class="form-group">
+                <label>Duração (segundos)</label>
+                <input type="number" min="0" id="arquivo-duracao" />
+              </div>
+              <div class="form-group">
+                <label>Status</label>
+                <select id="arquivo-ativo">
+                  <option value="true">Ativo</option>
+                  <option value="false">Inativo</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label>Caminho Completo</label>
+              <input type="text" id="arquivo-caminho" />
+            </div>
+
+            <div class="form-group">
+              <label>Observações</label>
+              <textarea id="arquivo-observacoes" rows="3"></textarea>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
+          <button class="btn btn-primary" onclick="saveArquivo()">Salvar</button>
         </div>
       </div>
     </div>
