--- a/frontend/index.html
+++ b/frontend/index.html
@@ -679,6 +679,112 @@
       </div>
     </div>
 
+    <!-- Faturamento Mensal Modal -->
+    <div id="modal-faturamento-mensal" class="modal modal-wide">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>Faturamento Mensal</h3>
+          <button class="btn-close" onclick="closeModal()">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="faturamento-contrato-id" />
+
+          <div class="card" style="margin-bottom: 1rem">
+            <h4 id="faturamento-contrato-label">Contrato</h4>
+            <div class="form-row">
+              <div class="form-group">
+                <label>Competência (YYYY-MM)</label>
+                <input type="month" id="faturamento-competencia" />
+              </div>
+              <div class="form-group">
+                <label>Filtro por Status</label>
+                <select id="faturamento-filtro-status">
+                  <option value="">Todos</option>
+                  <option value="pendente">Pendente</option>
+                  <option value="emitida">Emitida</option>
+                  <option value="paga">Paga</option>
+                  <option value="cancelada">Cancelada</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group">
+                <label>Status Inicial (criação manual)</label>
+                <select id="faturamento-status-inicial">
+                  <option value="pendente">Pendente</option>
+                  <option value="emitida">Emitida</option>
+                  <option value="paga">Paga</option>
+                  <option value="cancelada">Cancelada</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label>Número NF</label>
+                <input type="text" id="faturamento-numero-nf" />
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group">
+                <label>Data Emissão</label>
+                <input type="date" id="faturamento-data-emissao" />
+              </div>
+              <div class="form-group">
+                <label>Data Pagamento</label>
+                <input type="date" id="faturamento-data-pagamento" />
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group">
+                <label>Valor Cobrado (R$)</label>
+                <input type="number" step="0.01" min="0" id="faturamento-valor" />
+              </div>
+              <div class="form-group">
+                <label>Observações</label>
+                <input type="text" id="faturamento-observacoes" />
+              </div>
+            </div>
+            <div class="faturamento-mensal-actions">
+              <button class="btn btn-secondary" type="button" onclick="loadFaturamentosMensais()">
+                <i class="fas fa-sync-alt"></i> Atualizar Lista
+              </button>
+              <button class="btn btn-primary" type="button" onclick="criarFaturamentoMensalManual()">
+                <i class="fas fa-plus"></i> Criar Competência
+              </button>
+              <button class="btn btn-success" type="button" onclick="emitirNotaFiscalMensalAtual()">
+                <i class="fas fa-file-invoice"></i> Emitir NF
+              </button>
+            </div>
+          </div>
+
+          <div class="table-responsive">
+            <table class="table" id="table-faturamentos-mensais">
+              <thead>
+                <tr>
+                  <th>Competência</th>
+                  <th>Status</th>
+                  <th>Número NF</th>
+                  <th>Emissão</th>
+                  <th>Pagamento</th>
+                  <th>Valor</th>
+                  <th>Edição</th>
+                  <th>Ação</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td colspan="8" class="text-center">Carregando...</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" onclick="closeModal()">Fechar</button>
+        </div>
+      </div>
+    </div>
+
     <!-- Arquivo Modal -->
     <div id="modal-arquivo" class="modal">
       <div class="modal-content">
